@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/08/09 16:23:47 brook Exp $
+
+SHA1 (R/dplyr_0.8.3.tar.gz) = 23c1d3fabfd8203c6fef66e4572df7fddfb65cae
+RMD160 (R/dplyr_0.8.3.tar.gz) = 3d19458f074656291cb51c061f0905e1895d904e
+SHA512 (R/dplyr_0.8.3.tar.gz) = 268d1b1c68fc836521f7311928642b9c2a64fb28eef9014797a628894a3999bf932bc1d516826606f3c0b6b5a55f22e5185541d88c76c7b707be17369b1ad0d2
+Size (R/dplyr_0.8.3.tar.gz) = 1173098 bytes
